--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/aboutDialog.template.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/aboutDialog.template.html
@@ -4,7 +4,7 @@
 </div>
 <wc-bottom-fadeout default-height="75vh" scroll-id="wc-about-modal-body">
   <div class="modal-body wc-header-about-modal">
-    <div uib-accordion close-others="true">
+    <div uib-accordion close-others="false">
       <div uib-accordion-group panel-class="wc-about-panel" is-open="open.om">
         <div uib-accordion-heading>
           <div class="wc-about-panel-header">
