INTYG-6422: Filtrerar bort icke latin-1 tecken i utkastvykomponenterna

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDodsorsak/ueDodsorsakMulti.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDodsorsak/ueDodsorsakMulti.directive.html
@@ -18,6 +18,7 @@
                  class="form-control input-full"
                  ng-class="{'validation-error' : hasValidationError('beskrivning', $index)}"
                  ng-model="orsak.beskrivning"
+                 ue-filter-latin1
                  ng-blur="validate()"
                  maxlength="{{config.htmlMaxlength || 3500}}">
         </div>
