--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDodsorsak/ueDodsorsakRow.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDodsorsak/ueDodsorsakRow.directive.html
@@ -14,6 +14,7 @@
                class="form-control input-full"
                ng-class="{'validation-error' : hasValidationError('beskrivning', rowIndex)}"
                ng-model="modelValue.beskrivning"
+               ue-filter-latin1
                ng-blur="validate()"
                maxlength="{{config.htmlMaxlength || 3500}}">
       </div>
