--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukskrivningar/ueSjukskrivningar.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueSjukskrivningar/ueSjukskrivningar.directive.html
@@ -9,7 +9,7 @@
     <div>
       <label>
         <span dynamic-label key="common.sit.label.sjukskrivning.hoursperweek"></span>
-        <input class="form-control hoursPerWeek" type="text" ng-model="viewstate.hoursPerWeek"
+        <input class="form-control hoursPerWeek" type="text" ng-model="viewstate.hoursPerWeek" ue-filter-latin1
                ng-change="viewstate.updateHoursPerWeek()" ng-blur="validate()" maxlength="4"> timmar/vecka
         <span wc-help-chevron help-text-key="common.sit.help.sjukskrivning.hoursperweek"></span>
       </label>
