--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnos/ueDiagnos.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDiagnos/ueDiagnos.directive.html
@@ -49,6 +49,7 @@
                            placeholder="Kod"
                            ng-class="{'validation-error' : hasValidationError('diagnoskod', $index)}"
                            ng-model="diagnos.diagnosKod"
+                           ue-filter-latin1
                            ng-change="onDiagnoseCodeChanged($index)"
                            uib-typeahead="d.value as d.label for d in getDiagnoseCodes(diagnosViewState.diagnosKodSystem, $viewValue) | limitTo:10"
                            typeahead-min-length="3"
@@ -81,6 +82,7 @@
                        value=""
                        placeholder="Diagnos"
                        ng-model= "diagnos.diagnosBeskrivning"
+                       ue-filter-latin1
                        ng-blur="validate()"
                        ng-change="onDiagnoseDescriptionChanged($index)"
                        uib-typeahead="d.value as d.label for d in searchDiagnoseByDescription(diagnosViewState.diagnosKodSystem, $viewValue)"
