--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTextarea/ueTextarea.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTextarea/ueTextarea.directive.html
@@ -4,6 +4,7 @@
     <textarea ng-attr-id="{{::config.modelProp|ueDomIdFilter}}" name="{{::config.modelProp}}" class="form-control"
               rows="{{::config.rows || 6}}"
               auto-expand
+              ue-filter-latin1
               ng-model="modelGetterSetter"
               ng-model-options="{ debounce: 500, getterSetter: true }"
               maxlength="{{::config.htmlMaxlength || 3500}}"
