--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTextfield/ueTextfield.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueTextfield/ueTextfield.directive.html
@@ -8,6 +8,7 @@
         <input ng-attr-id="{{::config.modelProp|ueDomIdFilter}}" type="text" class="form-control"
                ng-model="modelGetterSetter"
                ng-model-options="{ debounce: config.numbersOnly ? 0 : 500, getterSetter: true }"
+               ue-filter-latin1
                ng-blur="updateValidation()"
                ng-disabled="config.disabled(model)"
                ng-class="::{ 'input-{{::config.size}}': config.size }"
