--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueIcf/ueIcf.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueIcf/ueIcf.directive.scss
@@ -73,7 +73,7 @@ ue-icf {
 
       .kategori-content {
         height: 300px;
-        padding: 10px;
+        padding: 10px 10px 30px 10px;
         overflow: auto;
         flex: 1 0 auto;
 
