--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/new/arendeNewModal.template.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/new/arendeNewModal.template.html
@@ -1,4 +1,5 @@
 <div class="modal-header">
+  <button type="button" class="close" ng-click="$close()"><i class="material-icons">close</i></button>
   <h3>Varning</h3>
 </div>
 <wc-bottom-fadeout>
