INTYG-6563: Ny tooltip för för vidarebefordra ärende.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendeFooter/wcArendeFooter.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendeFooter/wcArendeFooter.directive.html
@@ -39,7 +39,7 @@
             ng-show="!intygProperties.isRevoked"
             class="btn btn-primary stick-right" title="Skicka mejl med en länk till intyget för att informera den som ska hantera frågan-svaret."
             ng-click="openMailDialog()"
-            uib-popover="Skapar ett e-postmeddelande i din e-postklient med en direktlänk till frågan/svaret."
+            uib-popover="Skapar ett e-postmeddelande med länk till intyget."
             popover-trigger="mouseenter"
             popover-popup-delay="300"
             popover-append-to-body="true"
