INTYG-6563: Ny tooltip för för vidarebefordra ärende. Innehåller även fix för INTYG-5788.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendeFooter/wcArendeFooter.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendeFooter/wcArendeFooter.directive.html
@@ -37,7 +37,7 @@
     <button type="button" id="vidarebefordraEjHanterad"
             wc-authority="VIDAREBEFORDRA_FRAGASVAR" intygstyp="{{intygProperties.type}}"
             ng-show="!intygProperties.isRevoked"
-            class="btn btn-primary stick-right" title="Skicka mejl med en länk till intyget för att informera den som ska hantera frågan-svaret."
+            class="btn btn-primary stick-right"
             ng-click="openMailDialog()"
             uib-popover="Skapar ett e-postmeddelande med länk till intyget."
             popover-trigger="mouseenter"
