INTYG-6569: La till timeout check.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.html
@@ -25,7 +25,7 @@
 
 <wc-support-panel-scrollable-body dom-id="arende-panel-scrollable-body">
 
-  <wc-deprecated-intygstype-message wc-authority request-origin="!UTHOPP" message-suffix="arendeheader" intygs-type="{{::viewState.intygProperties.type}}"></wc-deprecated-intygstype-message>
+  <wc-deprecated-intygstype-message timeout="true" wc-authority request-origin="!UTHOPP" message-suffix="arendeheader" intygs-type="{{::viewState.intygProperties.type}}"></wc-deprecated-intygstype-message>
 
     <!-- error message -->
     <wc-alert-message id="arende-list-load-error"
