--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/vanliga-fragor/faq-normal-partial.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/vanliga-fragor/faq-normal-partial.html
@@ -1,9 +1,11 @@
 <!-- SKRIVA  ----------------->
-
 <div class="category" wc-authority feature="HANTERA_INTYGSUTKAST">
+
   <h2><i class="material-icons">create</i> Skriva intyg</h2>
+
   <wc-faq-question title="Finns det någon hjälpfunktion?">
-    <p>I anslutning till vissa rubriker och frågor finns en kort hjälptext som kan fällas ut. </p>
+    <p>I anslutning till vissa rubriker och frågor finns en kort hjälptext som kan fällas ut. Texten ger en utförligare
+      beskrivning av rubriken eller frågan.</p>
   </wc-faq-question>
 
   <wc-faq-question title="Hur kan jag få hjälp med bedömningar av funktionsnedsättning och aktivitetsbegränsning?">
@@ -11,30 +13,22 @@
       du anger en diagnos.</p>
   </wc-faq-question>
 
-  <wc-faq-question title="Hur använder jag mig av Socialstyrelsens försäkringsmedicinska beslutsstöd (FMB)?">
-    <p>När du anger en diagnos så gör Webcert en sökning i FMB för att kontrollera om det finns FMB-stöd för den valda
-      diagnosen. Finns FMB-stöd för den valda diagnosen, visas det vid de berörda fälten. Det är alltid den senaste
-      versionen av FMB som visas i Webcert. FMB är enbart synligt när du utfärdar intyget, det kommer inte skickas med
-      till Försäkringskassan eller invånaren, och inte heller synas på utskrifter. I FMB finns försäkringsmedicinsk
-      information och sjukskrivningsrekommendationer för ett hundratal diagnoser. Sjukskrivningsrekommendationerna ska
-      vara vägledande för bedömning av arbetsförmågan, men bedömningarna måste vara individuella och utgå ifrån enskilda
-      individers unika tillstånd. Om sjukskrivningen omfattar längre tid än den rekommenderade ska det motiveras.</p>
-
-    <p>För ytterligare information om hur FMB ska användas klicka <span dynamiclink
-                                                                        key="socialstyrelsenFmbAnvandas"></span>.</p>
-  </wc-faq-question>
-
   <wc-faq-question title="Vad är skillnaden mellan ett intyg och ett utkast?">
     <p>Ett utkast är inte signerat och behöver inte innehålla alla uppgifter som är obligatoriska vid signering. Du kan
       spara och ändra i det så många gånger du vill. Ett utkast går även att radera och tas då bort. Vid signering
-      övergår utkastet till att bli ett intyg. I samband med att intyget signeras skickas det till Intygstjänsten.</p>
-    <p>Så fort ett intyg är skickat till intygstjänsten är det tillgängligt för invånaren via minaintyg.se, med undantag
-      för dödsbevis och dödsorsaksintyg som aldrig tillgängliggörs på Mina intyg.</p>
+      övergår utkastet till att bli ett giltigt intyg.</p>
+
+    <p>När intyget signerats blir det tillgängligt för invånaren via Mina intyg, med undantag för dödsbevis och
+      dödsorsaksintyg som aldrig tillgängliggörs i Mina intyg.</p>
+
     <p>Ett signerat intyg kan inte ändras eller raderas, däremot kan ett intyg ersättas av ett nytt intyg. Ett intyg kan
       också vid allvarligt fel makuleras (ogiltigförklaras).</p>
+
+    <p>Ett utkast som inte har signerats inom 14 dagar kommer från dag 15 att låsas. Därmed går det inte längre att
+      redigera eller radera. Ett låst utkast kan vid allvarliga fel makuleras (ogiltigförklaras).</p>
   </wc-faq-question>
 
-  <wc-faq-question title="Tangentbordsnavigering i Webcert">
+  <wc-faq-question title="Finns tangentbordsnavigering i Webcert?">
     <p>I Webcert stöds navigering med hjälp av tangentbordet. Webcert följer den standard som finns för webbläsare och
       du kan använda "Tab" för att hoppa mellan ifyllnadsrutor i ett intygsutkast. I de fall ett fält utgörs av val i
       form av radioknappar används tangentbordets piltangenter för att navigera mellan valen. För att markera ett val i
@@ -52,112 +46,144 @@
       extra viktiga att skydda. Det finns speciella riktlinjer om hur personuppgifter för invånare med
       sekretessmarkering ska hanteras. I Webcert innebär det att:
     </p>
+
     <ul>
+      <li>Du som användare av Webcert ska behandla personuppgifterna med försiktighet. Samtliga personuppgifter rörande
+        patienten är skyddsvärda.
+      </li>
       <li>Endast läkare och tandläkare kan skapa intyg för dessa patienter.</li>
-      <li>Endast läkare och tandläkare, inloggade på den vårdenhet intyget förskrevs kan se och hantera intyget.</li>
-      <li>Det är synligt i alla vyer att patienten har en sekretessmarkering.</li>
-      <li>En utredning kring intyget och dess mottagare måste ske innan ett intyg kan tillåtas skrivas och skickas
-        elektroniskt. Vilket är orsaken till att alla intyg inte går att utfärda för patienter med sekretessmarkering.
+      <li>Endast läkare och tandläkare, inloggade på den vårdenhet intyget utfärdades på, kan se och hantera intyget.</li>
+      <li>En symbol visas i alla vyer i gränssnittet som indikerar att patienten har sekretessmarkerade personuppgifter.</li>
+      <li>Endast ett urval av intygstyper kan utfärdas för patienten med sekretessmarkerade personuppgifter. Det beror
+        på att det krävs särskild hantering av deras personuppgifter i Webcert och hos mottagaren av intyget.
       </li>
     </ul>
   </wc-faq-question>
 
   <wc-faq-question title="Kan jag skriva intyg för en patient med sekretessmarkering? ">
-    <p>Ja, läkare kan skriva Försäkringskassans intyg för patienter med en sekretessmarkering.</p>
-    <p>En vårdadministratör kan inte hantera intyg för en patient med sekretessmarkering.</p>
+    <p>Ja, läkare kan utfärda Försäkringskassans intyg för patienter med en sekretessmarkerade uppgifter.</p>
+
+    <p>En vårdadministratör har inte tillgång till intyg för en patient med sekretessmarkerade personuppgifter.</p>
   </wc-faq-question>
 
 </div>
-
-
 
 
 <!-- Spara intyg -->
 <div class="category" wc-authority feature="HANTERA_INTYGSUTKAST">
+
   <h2><i class="material-icons">save</i> Spara intyg</h2>
 
   <wc-faq-question title="Varför går det inte att spara intyget?">
     <p>Intyget sparas hela tiden automatiskt under utfärdandet. Om du stänger webbläsaren innan intyget har hunnit
-      sparas får du en varning. </p>
+      sparas får du en varning.</p>
   </wc-faq-question>
 
 </div>
-
-
 
 
 <!-- Skicka intyg -->
 <div class="category" wc-authority feature="HANTERA_INTYGSUTKAST">
+
   <h2><i class="material-icons">email</i> Skicka intyg</h2>
 
   <wc-faq-question title="Varför syns inte skicka-knappen?">
-    <p>Du har inte signerat intyget, skicka-knappen är endast tillgänglig för ett signerat intyg. </p>
+    <p>Det finns två fall som gör att knappen inte syns:
+    </p>
+
+    <ul>
+      <li>Intyget är inte signerat; skicka-knappen visas först när ett intyg signerats.</li>
+      <li>Intyget har redan skickats; antingen direkt i Webcert eller av patienten i Mina intyg.</li>
+    </ul>
   </wc-faq-question>
 
   <wc-faq-question title="När ska jag skicka intyget ? ">
-    <p>Ett sjukpenningintyg ska endast skickas till Försäkringskassan om samtliga fyra punkter är uppfyllda:
-    <ul>
-      <li>Sjukskrivningen kommer att vara längre än 14 dagar.</li>
-      <li>Patienten kommer att ansöka om sjukpenning.</li>
-      <li>Patienten kan eller vill inte skicka intyget från Mina intyg.</li>
-      <li>Skickandet görs i samråd med patienten.</li>
-    </ul>
+    <p>
+      Om patienten inte kan eller vill skicka intyget till mottagaren via Mina intyg, kan du skicka intyget till mottagaren direkt i Webcert. Samtliga intyg ska skickas till mottagaren i samråd med patienten. Det gäller inte för dödsbevis och dödsorsaksintyg som skickas automatiskt i samband med signering.
+      För sjukpenningintyg gäller dessutom följande krav för att det ska skickas till Försäkringskassan:
     </p>
-    <p>Försäkringskassans övriga intyg samt transportstyrelsens intyg ska skickas efter överenskommelse med
-      patienten. </p>
-    <p>Dödsbevis och dödsorsaksintyg skickas alltid automatiskt i samband med signering.</p>
+
+    <ul>
+      <li>Sjukskrivningen varar längre än 14 dagar.</li>
+      <li>Patienten ska ansöka om sjukpenning.</li>
+      <li>Intyget ska skickas till Försäkringskassan från dag 8 i sjukperioden om patienten är:
+        <ul>
+          <li>Egenföretagare</li>
+          <li>Arbetssökande</li>
+          <li>Anställd men arbetsgivaren betalar inte ut sjuklön</li>
+          <li>Studerande och arbetar med rätt till sjukpenning (tjänar mer än 10 700 per år)</li>
+          <li>Ledig med föräldrapenning</li>
+          <li>Ledig med graviditetspenning</li>
+        </ul>
+      </li>
+    </ul>
   </wc-faq-question>
 
 </div>
 
 
-
-
-<!-- Fråga och svars-funktionen -->
+<!-- Ärendekommunikation -->
 <div class="category" wc-authority feature="HANTERA_FRAGOR">
+
   <h2><i class="material-icons">forum</i> Ärendekommunikation</h2>
 
   <wc-faq-question title="Hur ställer jag en fråga till Försäkringskassan?">
-    <p>Funktionen för fråga och svar blir tillgänglig först när intyget är signerat och skickat till
-      Försäkringskassan.</p>
-    <p>Du kan då från samma vy som det signerade intyget klicka på knappen Ny fråga till Försäkringskassan.</p>
+    <p>Funktionen för att ställa en fråga blir tillgänglig först när intyget är signerat och skickat till Försäkringskassan.</p>
+
+    <p>Till höger om intyget kan du då ställa en fråga till Försäkringskassan under frågekategorin "Administrativa frågor".</p>
   </wc-faq-question>
 
   <wc-faq-question title="Hur vet jag om det har kommit en fråga eller ett svar från Försäkringskassan?">
-    <p>Om det inkommit en ny fråga syns det som en vit bubbla i hörnet på fliken Fråga och svar.</p>
-    <p>Du som är privatläkare får också ett mejl till den e-post du angav när du registrerade dig till att använda Webcert.</p>
+    <p>Om det inkommit en ny fråga skickas ett e-postmeddelande till den e-postadress som registrerats i HSA för
+      vårdenhet där intyget utfärdades.</p>
+
+    <p>Du som loggar in med e-legitimation får ett e-postmeddelande till den e-postadress du angav när du registrerade dig i Webcert.</p>
   </wc-faq-question>
 
   <wc-faq-question title="När försvinner frågor från listan under fliken &quot;Ej hanterade ärenden&quot; ?">
-    <p>En fråga försvinner aldrig från listan över frågor och svar, däremot så visas den inte i listan när den är markerad som hanterad. Det går att söka efter och se en hanterad fråga med hjälp av sökfiltret.</p>
+    <p>En fråga försvinner aldrig från listan över frågor och svar, däremot så visas den inte i listan när den är
+      markerad som hanterad. Det går att söka efter och se en hanterad fråga med hjälp av sökfiltret.</p>
   </wc-faq-question>
 
-  <wc-faq-question title="En fråga har besvarats via brev och ligger därmed kvar som obesvarad i Webcert. Hur tar jag bort frågan? ">
-    <p>Klicka i boxen &quot;Markera som hanterad&quot; intill frågan. Frågan markeras då som hanterad.</p>
+  <wc-faq-question title="En fråga har besvarats utanför Webcert och ligger därmed kvar som obesvarad i Webcert. Hur tar jag bort frågan?">
+    <p>Klicka i boxen &quot;Hanterad&quot; intill frågan. Frågan markeras då som hanterad.</p>
   </wc-faq-question>
 
 </div>
 
+
 <!-- Stöd för ifyllnad och bedömning -->
 <div class="category">
+
   <h2><i class="material-icons">lightbulb_outline</i> Stöd för ifyllnad och bedömning</h2>
 
   <wc-faq-question title="Vilka stöd finns det för att bedöma patients behov av sjukskriviningsgrad- och period och för att underlätta intygsutfärdande?">
-    <p>
-      I Webcert finns flera olika typer av stöd för ifyllnad och bedömning för Försäkringskassans Läkarintyg för sjukpenning.
-      Samtliga stöd är markerade med en glödlampa-symbol.
-    </p>
-    <p>
-      I Webcerts högerfält hittar du fliken "FMB" som presenterar Socialstyrelsens Försäkringsmedicinska beslutsstöd som innehåller
-      rekommendationer för sjukskrivning utifrån sjukdomar och tillstånd. Rekommendationerna är inte regler, utan vägledning.
-      Bedömningen av en persons arbetsförmåga ska alltid vara individuell och utgå ifrån individens unika förutsättningar.
-    </p>
-    <p>
-      Vid fältet "Bedömning" i intyget kan du ange hur många timmar patienten arbetar i snitt per vecka.
-      Detta stöd syftar till att tydliggöra hur många timmar per vecka patienten bedöms kunna arbeta när en viss nedsättning av arbetsförmåga har angivits.
-      Uppgiften lagras inte som en del av intyget då Försäkringskassan inhämtar information från annat håll.
-    </p>
+    <p>I Webcert finns flera olika typer av stöd för ifyllnad och bedömning för Försäkringskassans Läkarintyg för sjukpenning.
+      Samtliga stöd är markerade med en glödlampa-symbol.</p>
+
+    <p>I Webcerts högerfält hittar du fliken "FMB" som presenterar Socialstyrelsens Försäkringsmedicinska beslutsstöd.</p>
+
+    <p>Vid fältet "Bedömning" får du hjälp med att räkna ut hur många timmar patienten arbetar i snitt per vecka.</p>
   </wc-faq-question>
+
+  <wc-faq-question title="Hur använder jag mig av Socialstyrelsens försäkringsmedicinska beslutsstöd (FMB)?">
+    <p>När du anger en diagnos gör Webcert en sökning i FMB för att kontrollera om det finns FMB-stöd för den valda diagnosen.
+      Finns FMB-stöd för den valda diagnosen, visas det till höger om intyget. Det är alltid den senaste versionen av FMB
+      som visas i Webcert. FMB är enbart synligt när du utfärdar intyget, det kommer inte skickas med till Försäkringskassan
+      eller invånaren, och inte heller synas på utskrifter. I FMB finns försäkringsmedicinsk information och
+      sjukskrivningsrekommendationer för ett hundratal diagnoser. Sjukskrivningsrekommendationerna ska vara vägledande
+      för bedömning av arbetsförmågan, men bedömningarna måste vara individuella och utgå ifrån enskilda individers unika
+      tillstånd. Om sjukskrivningen omfattar längre tid än den rekommenderade ska det motiveras.</p>
+
+    <p>För ytterligare information om hur FMB ska användas, läs mer på <span dynamiclink key="socialstyrelsenFmbAnvandas"></span>.</p>
+  </wc-faq-question>
+
+  <wc-faq-question title="Finns det stöd för att visa hur många timmar per vecka patienten bedöms kunna arbeta?">
+    <p>Vid fältet "Bedömning" i intyget kan du ange hur många timmar patienten arbetar i snitt per vecka. Detta stöd syftar
+      till att tydliggöra hur många timmar per vecka patienten bedöms kunna arbeta när en viss nedsättning av arbetsförmåga
+      har angivits. Uppgiften lagras inte som en del av intyget då Försäkringskassan inhämtar information från annat håll.</p>
+  </wc-faq-question>
+
 </div>
 
 
@@ -167,7 +193,8 @@
   <h2><i class="icon-wc-ikon-tek-fragor icon-wc-24"></i> Tekniska frågor</h2>
 
   <wc-faq-question title="Varför ska jag inte använda Chrome eller Edge när jag loggar in i Webcert?">
-    <p>För att använda Webcert ska du använda Internet Explorer 11 eller en efterföljande version. Webbläsarna Chrome och Edge stödjer inte den metod som Webcert använder för att skapa signaturer.</p>
+    <p>Webcert är utvecklat för Internet Explorer 11 eller efterföljande version. Andra webbläsare, så som Chrome och
+      Edge, stöder inte den metod som Webcert använder för att skapa signaturer.</p>
   </wc-faq-question>
 
 </div>
