--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/vanliga-fragor/faq-uthopp-partial.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/vanliga-fragor/faq-uthopp-partial.html
@@ -1,29 +1,26 @@
-<!-- Fråga och svars-funktionen -->
+<!-- Ärendekommunikation -->
 <div class="category" wc-authority feature="HANTERA_FRAGOR">
+
   <h2><i class="material-icons">forum</i> Ärendekommunikation</h2>
 
   <wc-faq-question title="Hur ställer jag en fråga till Försäkringskassan?">
-    <p>Funktionen för fråga och svar blir tillgänglig först när intyget är signerat och skickat till
-      Försäkringskassan.</p>
-    <p>Du kan då från samma vy som det signerade intyget klicka på knappen Ny fråga till Försäkringskassan.</p>
+    <p>Funktionen för att ställa en fråga blir tillgänglig först när intyget är signerat och skickat till Försäkringskassan.</p>
+
+    <p>Till höger om intyget kan du då ställa en fråga till Försäkringskassan under frågekategorin "Administrativa frågor".</p>
   </wc-faq-question>
 
   <wc-faq-question title="Hur vet jag om det har kommit en fråga eller ett svar från Försäkringskassan?">
-    <p>Om det inkommit en ny fråga syns det som en vit bubbla i hörnet på fliken Fråga och svar.</p>
-    <p>När en fråga eller ett svar inkommit generereras även ett mail till den e-postadress som i HSA är registrerad som
-      vårdenhetens/mottagningens e-postadress.
-      Den person som är ansvarig för att fördela vårdenhetens inkomna svar, loggar in i Webcert för att antingen själv
-      markera svaret som hanterat eller vidarebefordra frågan/svaret till rätt läkare.</p>
+    <p>Om det inkommit en ny fråga skickas ett e-postmeddelande till den e-postadress som registrerats i HSA för
+      vårdenhet där intyget utfärdades.</p>
   </wc-faq-question>
 
-  <wc-faq-question title="När försvinner frågor från listan under fliken &quot;Ej hanterade ärendenr&quot; ?">
+  <wc-faq-question title="När försvinner frågor från listan under fliken &quot;Ej hanterade ärenden&quot; ?">
     <p>En fråga försvinner aldrig från listan över frågor och svar, däremot så visas den inte i listan när den är
       markerad som hanterad. Det går att söka efter och se en hanterad fråga med hjälp av sökfiltret.</p>
   </wc-faq-question>
 
-  <wc-faq-question
-      title="En fråga har besvarats via brev och ligger därmed kvar som obesvarad i Webcert. Hur tar jag bort frågan? ">
-    <p>Klicka i boxen &quot;Markera som hanterad&quot; intill frågan. Frågan markeras då som hanterad.</p>
+  <wc-faq-question title="En fråga har besvarats utanför Webcert och ligger därmed kvar som obesvarad i Webcert. Hur tar jag bort frågan?">
+    <p>Klicka i boxen &quot;Hanterad&quot; intill frågan. Frågan markeras då som hanterad.</p>
   </wc-faq-question>
 
 </div>
@@ -31,11 +28,12 @@
 
 <!-- Tekniska frågor -->
 <div class="category">
+
   <h2><i class="icon-wc-ikon-tek-fragor icon-wc-24"></i> Tekniska frågor</h2>
 
   <wc-faq-question title="Varför ska jag inte använda Chrome eller Edge när jag loggar in i Webcert?">
-    <p>För att använda Webcert ska du använda Internet Explorer 11 eller en efterföljande version. Webbläsarna Chrome
-      och Edge stödjer inte den metod som Webcert använder för att skapa signaturer.</p>
+    <p>Webcert är utvecklat för Internet Explorer 11 eller efterföljande version. Andra webbläsare, så som Chrome och
+      Edge, stöder inte den metod som Webcert använder för att skapa signaturer.</p>
   </wc-faq-question>
 
 </div>
