--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcDropdown/wcDropdown.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcDropdown/wcDropdown.directive.html
@@ -1,5 +1,5 @@
 <div ng-click="togglePlate()"
-     tabindex="{{disabled?-1:0}}"
+     tabindex="{{disabled || formDisabled?-1:0}}"
      aria-haspopup="listbox"
      aria-expanded="{{isOpen}}"
      aria-owns="wcdropdown-{{id}}"
