INTYG-6697: Fixat till headern i mina intyg

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/miCompactCertificateHeader/miCompactCertificateHeader.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/miCompactCertificateHeader/miCompactCertificateHeader.directive.html
@@ -25,10 +25,10 @@
             </div>
         </div>
 
-        <div class="certificate-issued-date date-wrapper">
+        <div class="certificate-issued-date">
             <span class="visible-xs">Utfärdat</span>
             <span class="hidden-xs">Intyg utfärdat</span>
-            <b>{{certMetaModel.sentDate | date:'shortDate'}}</b>
+            <b class="date">{{certMetaModel.sentDate | date:'shortDate'}}</b>
         </div>
 
     </div>
