--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/miCompactCertificateHeader/miCompactCertificateHeader.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/components/miCompactCertificateHeader/miCompactCertificateHeader.directive.scss
@@ -58,6 +58,7 @@ mi-compact-certificate-header {
   }
 
   .certificate-issued-date {
+    align-self: flex-end;
     text-align: right;
     margin-left: 28px;
     margin-right: 0;
