INTYG-6720: Uppdatera texten om användare i Om Webcert

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/about-partial.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/about-partial.html
@@ -29,8 +29,9 @@
 
 <h4>Användare</h4>
 <p>
-  Webcert har flera typer av användare: läkare, tandläkare och vårdadministratörer (exempelvis läkarsekreterare).
-  Behörighet för inloggning: </p>
+  En användare loggas in som en av tre roller i i Webcert. De roller som finns är läkare, tandläkare och
+  vårdadministratör (till exempel läkarsekreterare). Den roll som användaren tilldelas i Webcert beror på
+  informationen som finns angiven i HSA-katalogen.</p>
 <ul>
   <li>Vårdadministratör ska ha medarbetaruppdraget "Vård och behandling" i HSA.</li>
   <li>Tandläkare ska vara legitimerad tandläkare samt ha medarbetaruppdraget ”Vård och behandling” i HSA.</li>
@@ -45,6 +46,9 @@
       <li>Vikarierande examinerad läkare (examinerade AT-läkare som ännu inte fått sin legitimation och personer
         som har tagit sin läkarexamen men ännu inte påbörjat AT-tjänstgöring) som av vårdgivaren har tilldelats en
         gruppförskrivarkod och därmed har ett särskilt förordnande att utöva läkaryrket.
+      </li>
+      <li>Medicinstuderande som innehar vikariat kommer vid inloggning att tilldelas rollen Läkare. Det är verksamheten
+        som reglerar om en användare tillhörande denna grupp har behörighet att utfärda intyg i Webcert.
       </li>
     </ul>
   </li>
