DEVENV: Fix för protractor

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/new/arendeNew.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/new/arendeNew.directive.html
@@ -20,8 +20,7 @@
                   class="form-control"
                   ng-model="arendeNewModel.frageText"
                   wc-focus-me="localViewState.focusArende"
-                  ue-filter-latin1>
-        </textarea>
+                  ue-filter-latin1></textarea>
       </div>
 
       <!-- error message occuring when inteacting with server for this FragaSvar-->
