DEVENV: La till maxlength i textarea

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/komplettera/komplettering-modal-dialog.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/komplettera/komplettering-modal-dialog.html
@@ -36,7 +36,8 @@
           <div class="form-group">
             <textarea id="komplettering-modal-dialog-ovriga-upplysningar"
                       class="form-control"
-                      ng-model="model.ovrigaUpplysningar">
+                      ng-model="model.ovrigaUpplysningar"
+                      maxlength="3500">
             </textarea>
           </div>
         </div>
