INTYG-6122: Snyggat till menyn så den inte hoppar till när statistiken kommer

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcMainMenu/wcMainMenu.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcMainMenu/wcMainMenu.directive.scss
@@ -69,4 +69,9 @@ wc-main-menu {
     border-color: $wc-color-20;
     color: $wc-color-19;
   }
+
+  .menu-label {
+    padding: 2px 0;
+    display: inline-block;
+  }
 }
