INTYG-6667: TS-kaos temp commit.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckgroupTs/ueCheckgroupTs.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueCheckgroupTs/ueCheckgroupTs.directive.html
@@ -3,6 +3,7 @@
   <div class="row form-horizontal">
     <ue-label class="col-sm-12" config="::config.label" model="::model"></ue-label>
     <div class="col-md-2 col-sm-4" data-ng-repeat="choice in modelGetterSetter()">
+      {{choice}}
      <wc-checkbox-wrapper>
         <input ng-attr-id="{{::config.modelProp}}-{{::choice.type|ueDomIdFilter}}"
                type="checkbox"
