INTYG-6987: Hantering av WC-F033 Godkänna intygsmottagare för WC (tvingande dialog vid signering + optional settings efter)

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -55,6 +55,9 @@
   @import 'components/headers/wcAppHeader/wcHeaderUser/wcVardPersonSekretess/wcVardPersonSekretess.directive.scss';
   @import 'components/headers/wcHeader.partial.scss';
   @import 'components/headers/wcMainMenu/wcMainMenu.directive.scss';
+  @import 'components/receiver/approveReceiversDialog.scss';
+  @import 'components/receiver/wcApproveReceiverRow/wcApproveReceiverRow.directive.scss';
+  @import 'components/receiver/wcApproveReceiversButton/wcApproveReceiversButton.directive.scss';
   @import 'components/wcAlertMessage/wcAlertMessage.directive.scss';
   @import 'components/wcBottomFadeout/wcBottomFadeout.directive.scss';
   @import 'components/wcButton/wcButton.directive.scss';
