INTYG-6449: Lagt till valideringslista i vaguedate för månaden.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueVagueDate/ueVagueDate.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueVagueDate/ueVagueDate.directive.html
@@ -33,4 +33,13 @@
       </td>
     </tr>
   </table>
+
+  <div>
+    <ue-validation-list
+          class="ng-animate-disabled"
+          field-type="ue-dropdown"
+          warnings="validation.warningMessagesByField[monthValidationKey]"
+          validations="validation.messagesByField[monthValidationKey]">
+      </ue-validation-list>
+  </div>
 </div>
