INTYG-6987: Rättat knapplabel

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/receiver/wcApproveReceiversButton/wcApproveReceiversButton.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/receiver/wcApproveReceiversButton/wcApproveReceiversButton.directive.html
@@ -8,5 +8,5 @@
         popover-popup-delay="300"
         popover-append-to-body="true"
         popover-placement="auto top">
-  <i class="material-icons">description</i> Godkänn intygsmottagare
+  <i class="material-icons">description</i> Välj intygsmottagare
 </button>
