INTYG-6242: Ett litet w har smugit sig in i Om Webcert

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/about-partial-privatlakare.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/about-partial-privatlakare.html
@@ -19,7 +19,7 @@
 
 
 <h4>Funktioner</h4><p>
-  I webcert kan du skapa och hantera intyg. Webcert stödjer utfärdande av vissa intygstyper för patienter med
+  I Webcert kan du skapa och hantera intyg. Webcert stödjer utfärdande av vissa intygstyper för patienter med
   sekretessmarkering. </p><p>
   För Försäkringskassans intyg finns en elektronisk funktion för frågor och svar samt hantering av
   kompletteringsbegäran. Via funktionen kan läkaren och Försäkringskassan kommunicera om ett signerat intyg. </p>
