INTYG-6896: När det inte finns kompletteringar eller frågor visas inte footern.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.html
@@ -80,7 +80,9 @@
 
 </wc-support-panel-scrollable-body>
 
-<wc-arende-footer ng-if="viewState.intygProperties.isInteractionEnabled" arende-list="viewState.arendeList"></wc-arende-footer>
+<wc-arende-footer ng-if="viewState.intygProperties.isInteractionEnabled && 
+                         (unhandledAdministrativaFragorCount > 0 || unhandledKompletteringCount > 0)" 
+                         arende-list="viewState.arendeList"></wc-arende-footer>
 
 </wc-spinner>
 <!--  end spinner -->
