INTYG-7053: Lagt till ue-year-picker komponent och använder den i ts-diabetes-2 intyget.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -152,6 +152,7 @@
   @import 'utkast/unified-edit/components/ueTypeahead/ueTypeAhead.directive.scss';
   @import 'utkast/unified-edit/components/ueVagueDate/ueVagueDate.scss';
   @import 'utkast/unified-edit/components/ueYear/ueYear.directive.scss';
+  @import 'utkast/unified-edit/components/ueYearPicker/ueYearPicker.directive.scss';
   @import 'utkast/unified-edit/containers/ueComponentToggler/ueComponentToggler.directive.scss';
   @import 'utkast/unified-edit/containers/ueFraga/ueFraga.directive.scss';
   @import 'utkast/unified-edit/containers/ueGrid/ueGrid.scss';
