INTYG-6826: Visar svar som eget "kort"

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/svar/arendePanelSvar.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/svar/arendePanelSvar.directive.html
@@ -49,7 +49,7 @@
   </div>
 
   <!-- Svarsdelen -->
-  <div ng-if="showAnswer()" class="arende-svar">
+  <div ng-if="showAnswer()" class="arende-svar card">
     <div class="arende-block" ng-class="{'arende-block-handled': arendeSvar.status == 'CLOSED',
             'arende-block-fk' : (arendeSvar.frageStallare | lowercase) == 'wc',
              'arende-block-wc' : (arendeSvar.frageStallare | lowercase) == 'fk'}">
@@ -66,5 +66,6 @@
       </div>
     </div>
   </div>
+  <div ng-if="showAnswer()" class="card-divider"></div>
 
 </div>
