--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/svar/arendePanelSvar.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/svar/arendePanelSvar.directive.scss
@@ -21,7 +21,7 @@ arende-panel-svar {
   display: block;
 
   .arende-svar {
-    margin-bottom: 18px;
+    padding: 28px 20px 0;
   }
 
   textarea.form-control {
