--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendePanelTab.directive.scss
@@ -17,8 +17,12 @@ wc-arende-panel-tab {
     .card {
       padding: 28px 20px;
       border-radius: 0;
-      box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.24);
+      box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.24);
       margin: 0;
+    }
+
+    .card:last-of-type {
+      box-shadow: none;
     }
   }
 
