INTYG-5141: Lagt till validering att datum för operation inte hamnar mer än fyra veckor innan dödsdatum

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDate/ueDate.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/unified-edit/components/ueDate/ueDate.directive.html
@@ -11,8 +11,8 @@
               add-date-parser="loose"
               on-blur="updateValidation()"
               dom-id="datepicker_{{::config.modelProp}}"
-              min-date="{{::config.minDate}}"
-              max-date="{{::config.maxDate}}" />
+              min-date="{{config.minDate}}"
+              max-date="{{config.maxDate}}" />
       </div>
     </div>
   </ue-validation-wrapper>
