INTYG-6942: Fixat rätt avstånd mellan knappar i buttonbaren.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygButtonBar/wcIntygButtonBar.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygHeader/wcIntygButtonBar/wcIntygButtonBar.directive.scss
@@ -45,4 +45,10 @@ wc-intyg-button-bar {
       cursor: not-allowed;
     }
   }
+  div.white-space-no-wrap {
+    display: flex;
+    > * {
+      margin-left: 9px;
+    }
+  }
 }
