--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendeKompletteraMeddelandeConfirmation/wcArendeKompletteraMeddelandeConfirmation.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendeKompletteraMeddelandeConfirmation/wcArendeKompletteraMeddelandeConfirmation.scss
@@ -20,7 +20,7 @@
 wc-arende-komplettera-meddelande-confirmation {
 
   .card {
-    padding: 20px 20px !important;
+    padding: 20px 20px 0 !important;
   }
 
   wc-alert-message {
