INTYG-7088: Lagat en del länkar till andra intyg/utkast så nu måste ha med intygTypeVersion som stateParam / url

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendeKompletteraUtkastWarning/wcArendeKompletteraUtkastWarning.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendeKompletteraUtkastWarning/wcArendeKompletteraUtkastWarning.directive.html
@@ -4,7 +4,7 @@
        wc-authority="BESVARA_KOMPLETTERINGSFRAGA">
     <wc-alert-message
         alert-severity="warning">Det finns redan en påbörjad komplettering. <a id="komplettera-open-utkast"
-         ng-href="#/{{intygType}}/edit/{{intygId}}/">Öppna utkastet</a>
+         ng-href="#/{{intygType}}/{{intygTypeVersion}}/edit/{{intygId}}/">Öppna utkastet</a>
     </wc-alert-message>
   </div>
 </div>
