INTYG-5768: intygstyp är nu required i wc-authority för features och authorities

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/vanliga-fragor/faq-uthopp-partial.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/vanliga-fragor/faq-uthopp-partial.html
@@ -1,5 +1,5 @@
 <!-- Ärendekommunikation -->
-<div class="category" wc-authority feature="HANTERA_FRAGOR">
+<div class="category" wc-authority feature="HANTERA_FRAGOR" intygstyp="">
 
   <h2><i class="material-icons">forum</i> Ärendekommunikation</h2>
 
