--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcMainMenu/wcMainMenu.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcMainMenu/wcMainMenu.directive.html
@@ -1,4 +1,4 @@
-<div id="huvudmeny" wc-authority="NAVIGERING" class="navbar navbar-wc">
+<div id="huvudmeny" wc-authority="NAVIGERING" intygstyp="" class="navbar navbar-wc">
 
 
     <ul class="nav navbar-nav">
