--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendeFooter/wcArendeFooter.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/wcArendeFooter/wcArendeFooter.directive.html
@@ -5,6 +5,7 @@
            wc-authority="BESVARA_KOMPLETTERINGSFRAGA" intygstyp="{{intygProperties.type}}">
         <wc-button
             wc-authority="SVARA_MED_NYTT_INTYG"
+            intygstyp="{{intygProperties.type}}"
             btn-id="komplettera-intyg"
             btn-class="btn-success margin-right"
             btn-click="kompletteraIntyg()"
