--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/vanliga-fragor/faq-djupintegrerad-partial.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/headers/wcAppHeader/wcHeaderHelp/about/vanliga-fragor/faq-djupintegrerad-partial.html
@@ -1,5 +1,5 @@
 <!-- SKRIVA  ----------------->
-<div class="category" wc-authority feature="HANTERA_INTYGSUTKAST">
+<div class="category" wc-authority feature="HANTERA_INTYGSUTKAST" intygstyp="">
 
   <h2><i class="material-icons">create</i> Skriva intyg</h2>
 
@@ -70,7 +70,7 @@
 
 
 <!-- Spara intyg -->
-<div class="category" wc-authority feature="HANTERA_INTYGSUTKAST">
+<div class="category" wc-authority feature="HANTERA_INTYGSUTKAST" intygstyp="">
 
   <h2><i class="material-icons">save</i> Spara intyg</h2>
 
@@ -83,7 +83,7 @@
 
 
 <!-- Skicka intyg -->
-<div class="category" wc-authority feature="HANTERA_INTYGSUTKAST">
+<div class="category" wc-authority feature="HANTERA_INTYGSUTKAST" intygstyp="">
 
   <h2><i class="material-icons">email</i> Skicka intyg</h2>
 
@@ -123,7 +123,7 @@
 
 
 <!-- Ärendekommunikation -->
-<div class="category" wc-authority feature="HANTERA_FRAGOR">
+<div class="category" wc-authority feature="HANTERA_FRAGOR" intygstyp="">
 
   <h2><i class="material-icons">forum</i> Ärendekommunikation</h2>
 
