INTYG-7182: Diagnosbeskrivning visas även när det saknas data från FMB

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/wcFmbPanelTab.directive.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/wcFmbPanelTab.directive.scss
@@ -38,6 +38,9 @@ wc-fmb-panel-tab {
             color: $wc-color-22;
             cursor: not-allowed;
           }
+          span {
+            display: inline-block;
+          }
         }
       }
     }
