INTYG-7186: dialog.service kan nu ta titleId som parameter, vilket används av utkastSign.service

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/dialog/dialogError.template.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/dialog/dialogError.template.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <h3>Tekniskt fel</h3>
+  <h3><span dynamic-label key="{{customTitleId}}"></span></h3>
 </div>
 <wc-bottom-fadeout>
   <div class="modal-body">
