INTYG-7187: Förlängt postort fältet som hade blivit lite för kort.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/wc-common.scss
@@ -432,6 +432,14 @@
     max-width: 5em;
   }
 
+  .input-15 {
+    max-width: 15em;
+  }
+
+  .input-20 {
+    max-width: 20em;
+  }
+
   .input-30 {
     max-width: 30em;
   }
