--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/wcFmbPanelTab.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/wcFmbPanelTab.directive.html
@@ -65,7 +65,13 @@
 </wc-support-panel-scrollable-body>
 
 <div class="fmb-footer">
-  <span dynamiclink key="fmbSoc" class="dark"></span>
+   <span class="unbreakable">
+      <a href="{{vm.referensLink}}"
+         target="_blank" rel="noopener noreferrer">
+          {{vm.referensDescr}}
+       <i ng-if="vm.referensDescr" class="external-link-icon material-icons">launch</i>
+     </a>
+   </span>
   <img src="/web/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/socialstyrelsen.png" width="40"
        height="26">
 </div>
