--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/wcFmbPanelTab.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/wcFmbPanelTab.directive.html
@@ -65,7 +65,7 @@
 </wc-support-panel-scrollable-body>
 
 <div class="fmb-footer">
-  <span dynamiclink key="fmbSoc" class="dark"></span>
+  <a target="_blank" rel="noopener noreferrer" href="{{vm.referensLink}}">{{vm.referensDescr}}</a>
   <img src="/web/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/socialstyrelsen.png" width="40"
        height="26">
 </div>
