--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/wcFmbPanelTab.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/wcFmbPanelTab.directive.html
@@ -62,16 +62,21 @@
     <div dynamic-label key="{{::vm.noDataMessage.warning}}"></div>
   </div>
 
+  <div class="fmb-more-information-section">
+    <h4>Mer Information</h4>
+    <span class="unbreakable">
+      <a href="{{vm.referensLink}}"
+          target="_blank" rel="noopener noreferrer">
+          {{vm.referensDescr}}
+        <i ng-if="vm.referensDescr" class="external-link-icon material-icons">launch</i>
+      </a>
+    </span>
+  </div>
+
 </wc-support-panel-scrollable-body>
 
 <div class="fmb-footer">
-   <span class="unbreakable">
-      <a href="{{vm.referensLink}}"
-         target="_blank" rel="noopener noreferrer">
-          {{vm.referensDescr}}
-       <i ng-if="vm.referensDescr" class="external-link-icon material-icons">launch</i>
-     </a>
-   </span>
+  <span dynamiclink key="fmbSoc" class="dark"></span>
   <img src="/web/webjars/common/webcert/components/wcSupportPanelManager/wcFmbPanelTab/socialstyrelsen.png" width="40"
        height="26">
 </div>
