INTYG-7232: Tog bort knappen för att skicka intyg från Mina intyg på af00213

--- a/af/af00213/src/main/resources/META-INF/resources/webjars/af00213/minaintyg/views/view-cert.html
+++ b/af/af00213/src/main/resources/META-INF/resources/webjars/af00213/minaintyg/views/view-cert.html
@@ -41,7 +41,7 @@
 
             <mi-certificate-replaced cert-meta-model="certMeta"></mi-certificate-replaced>
 
-            <mi-certificate-action-buttons cert-model="cert" on-send="send(cert)" enable-archive="true"
+            <mi-certificate-action-buttons cert-model="cert" enable-archive="true"
                                            enable-print="true"
                                            is-replaced="certMeta.isReplaced" enable-customize="false">
             </mi-certificate-action-buttons>
