--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/svar/arendePanelSvar.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/components/wcSupportPanelManager/wcArendePanelTab/panel/svar/arendePanelSvar.directive.html
@@ -48,8 +48,8 @@
     </div>
   </div>
 
-  <!-- Svarsdelen -->
-  <div ng-if="showAnswer()" class="arende-svar card">
+   <!-- Svarsdelen -->
+   <div ng-if="showAnswer() && !arendeSvar.answeredWithIntyg" class="arende-svar card">
     <div class="arende-block" ng-class="{'arende-block-handled': arendeSvar.status == 'CLOSED',
             'arende-block-fk' : (arendeSvar.frageStallare | lowercase) == 'wc',
              'arende-block-wc' : (arendeSvar.frageStallare | lowercase) == 'fk'}">
@@ -59,13 +59,14 @@
 
       <div id="{{panelId}}-arende-svartext-{{arendeSvar.fragaInternReferens}}" class="arende-block-body">
         <div ng-if="arendeSvar.meddelande" class="multiline">{{arendeSvar.meddelande}}</div>
-        <div ng-if="arendeSvar.answeredWithIntyg">
-          <span class="multiline" dynamic-label key="common.arende.svar.besvaradmedintyg"></span><br>
-          <button class="btn btn-link btn-link__purelink" ng-click='goToIntyg()' ><span dynamic-label key="common.arende.svar.go"></span></button>
-        </div>
       </div>
     </div>
   </div>
+
+  <div ng-if="showAnswer() && arendeSvar.answeredWithIntyg">
+    <wc-arende-komplettera-intyg-confirmation></wc-arende-komplettera-intyg-confirmation>
+  </div>
+  
   <div ng-if="showAnswer()" class="card-divider"></div>
 
 </div>
